# AILS-MICCAI-UWF4DR-Challenge

./: .flake8  .flake8-ci  .gitignore  Makefile  README.md  aes256.key  pyproject.toml  requirements.txt  results.json  train_log.csv  val_log.csv
.github/workflows/: ci.yml
ails_miccai_uwf4dr_challenge/: __init__.py  augmentations.py  config.py  dataset.py  datasetPreparation.py  dataset_strategy.py  features.py  plots.py  preprocess_augmentations.py  sort_data_into_df.py
ails_miccai_uwf4dr_challenge/modeling/: predict.py  train.py
ails_miccai_uwf4dr_challenge/models/: metrics.py  timings.py  train_model.py  train_model_plain.py  (+2 more)
models/: ResNet18.py  model_external.py  submission_builder.py  task1_automorph.py  task1_automorph_plain.py  task1_efficientnet.py  task1_resnet18.py
notebooks/: 0.01-morhad-dataexploration.ipynb  0.02-morhad-augmentations.ipynb  0.02-morhad-datasetmanipulation.ipynb  0.03-vp-trail.ipynb  00-vp-initial_data_exploration.ipynb  01-vp-svm.ipynb  1.01-morhad-resnet18_training.ipynb  2.01-bsc_training_on_colab.ipynb  2.01-morhad_training.ipynb  2.02-bsc_image_transform.ipynb
preprocessing/: mask.npy
reports/: interfernce_time.py
tests/: test_train_task1_automorph_plain.py
tools/: build_submission.py  download_data_and_chkpts.py  download_data_chkpts.py  encrypt_data_files.py  evaluate_activation_map.py  evaluate_submission_for_paper.py  generate_python_path_command.py  install_requirements.py
wandb/: debug-internal.log.12989  debug-internal.log.15525  debug-internal.log.16202  debug.log.12989  debug.log.15525  debug.log.16202
(+74 files in other folders)
